--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
     displayName: 'Provisioning Container Instance'
     pool:
       name: LocalMContainer
-      vmImage: ubuntu-lastest
+      vmImage: 'ubuntu-lastest'
     variables:
     - group: TeraformEnvVars
     steps:
@@ -54,4 +54,4 @@ stages:
         ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)   
-
+        TF_VAR_imagebuild: $(tag)
