--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.0
 idna==3.4
+importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -18,5 +19,7 @@ PyMySQL==1.0.2
 requests==2.28.1
 SQLAlchemy==1.4.42
 urllib3==1.26.12
+uWSGI==2.0.21
 Werkzeug==2.2.2
 yarg==0.1.9
+zipp==3.10.0
